--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
+<!DOCTYPE html>
+<html>
 <head>
   <title>Green Appalachia</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>
-    Green Appalachia
-  </h1>
-  <img src="DSCN0933.jpg" alt="leaves">
-</body>
+  <div class="marquee">
+    <h1>Green Appalachia</h1>
+  </div>
+  <img src="images/DSCN0858.JPG" alt="leaves" class="fullscreen-img">
+  
+  <div class="content-after-marquee">
+    <!-- Your content after the marquee image goes here -->
+  </div>
 
-<style>
-</style>
+  <!-- Your JavaScript file -->
+  <script src="script.js"></script>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</body>
+</html>
